# klish-plugin-sysrepo

./: .gitignore  Makefile.am  README.md  configure.ac  ipath.c  pline.c  pline.h  ttt.yang  ytree.c
docs/: klish-plugin-sysrepo.ru.md
src/: Makefile.am  pline.c  pline.h  plugin.c  private.h  show.c  show.h  sr_copypaste.c  sr_copypaste.h  syms.c  syms.h
xml/: sysrepo.xml
yang/: klish.yang
